@@ -130,6 +130,7 @@ public:
   bool GetArtistsNav(const CStdString& strBaseDir, CFileItemList& items, long idGenre);
   bool GetAlbumsNav(const CStdString& strBaseDir, CFileItemList& items, long idGenre, long idArtist);
   bool GetSongsNav(const CStdString& strBaseDir, CFileItemList& items, long idGenre, long idArtist,long idAlbum);
+  bool GetSongsByWhere(const CStdString &whereClause, CFileItemList& items);
   bool GetRandomSong(CFileItem* item);
   bool GetRandomSong(CFileItem* item, const CStdString& strWhere);
   bool GetRandomSong(CFileItem* item, long& lSongId, const CStdString& strWhere);
